// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CredentialsReducer should handle all defined error types: rejected types ADD_CREDENTIAL 1`] = `
{
  "result": {
    "deleted": {},
    "dialog": {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "show": false,
      "update": false,
    },
    "expanded": {},
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "ADD_CREDENTIAL_REJECTED",
}
`;

exports[`CredentialsReducer should handle all defined error types: rejected types DELETE_CREDENTIAL 1`] = `
{
  "result": {
    "deleted": {
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "dialog": {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": {},
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "DELETE_CREDENTIAL_REJECTED",
}
`;

exports[`CredentialsReducer should handle all defined error types: rejected types GET_CREDENTIALS 1`] = `
{
  "result": {
    "deleted": {},
    "dialog": {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": {},
    "selected": {},
    "update": 0,
    "view": {
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
  },
  "type": "GET_CREDENTIALS_REJECTED",
}
`;

exports[`CredentialsReducer should handle all defined error types: rejected types UPDATE_CREDENTIAL 1`] = `
{
  "result": {
    "deleted": {},
    "dialog": {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "show": false,
      "update": false,
    },
    "expanded": {},
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "UPDATE_CREDENTIAL_REJECTED",
}
`;

exports[`CredentialsReducer should handle all defined fulfilled types: fulfilled types ADD_CREDENTIAL 1`] = `
{
  "result": {
    "deleted": {},
    "dialog": {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "data": {
        "test": "success",
      },
      "date": undefined,
      "edit": false,
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "show": false,
      "update": false,
    },
    "expanded": {},
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "ADD_CREDENTIAL_FULFILLED",
}
`;

exports[`CredentialsReducer should handle all defined fulfilled types: fulfilled types DELETE_CREDENTIAL 1`] = `
{
  "result": {
    "deleted": {
      "data": {
        "test": "success",
      },
      "date": undefined,
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "dialog": {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": {},
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "DELETE_CREDENTIAL_FULFILLED",
}
`;

exports[`CredentialsReducer should handle all defined fulfilled types: fulfilled types GET_CREDENTIALS 1`] = `
{
  "result": {
    "deleted": {},
    "dialog": {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": {},
    "selected": {},
    "update": 0,
    "view": {
      "data": {
        "test": "success",
      },
      "date": undefined,
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
  },
  "type": "GET_CREDENTIALS_FULFILLED",
}
`;

exports[`CredentialsReducer should handle all defined fulfilled types: fulfilled types UPDATE_CREDENTIAL 1`] = `
{
  "result": {
    "deleted": {},
    "dialog": {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "data": {
        "test": "success",
      },
      "date": undefined,
      "edit": false,
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "show": false,
      "update": false,
    },
    "expanded": {},
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "UPDATE_CREDENTIAL_FULFILLED",
}
`;

exports[`CredentialsReducer should handle all defined pending types: pending types ADD_CREDENTIAL 1`] = `
{
  "result": {
    "deleted": {},
    "dialog": {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "show": false,
      "update": false,
    },
    "expanded": {},
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "ADD_CREDENTIAL_PENDING",
}
`;

exports[`CredentialsReducer should handle all defined pending types: pending types DELETE_CREDENTIAL 1`] = `
{
  "result": {
    "deleted": {
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "update": false,
    },
    "dialog": {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": {},
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "DELETE_CREDENTIAL_PENDING",
}
`;

exports[`CredentialsReducer should handle all defined pending types: pending types GET_CREDENTIALS 1`] = `
{
  "result": {
    "deleted": {},
    "dialog": {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": {},
    "selected": {},
    "update": 0,
    "view": {
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "update": false,
    },
  },
  "type": "GET_CREDENTIALS_PENDING",
}
`;

exports[`CredentialsReducer should handle all defined pending types: pending types UPDATE_CREDENTIAL 1`] = `
{
  "result": {
    "deleted": {},
    "dialog": {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "show": false,
      "update": false,
    },
    "expanded": {},
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "UPDATE_CREDENTIAL_PENDING",
}
`;

exports[`CredentialsReducer should handle specific defined types: defined type CREATE_CREDENTIAL_SHOW 1`] = `
{
  "result": {
    "deleted": {},
    "dialog": {
      "add": true,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": true,
    },
    "expanded": {},
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "CREATE_CREDENTIAL_SHOW",
}
`;

exports[`CredentialsReducer should handle specific defined types: defined type DESELECT_CREDENTIAL 1`] = `
{
  "result": {
    "deleted": {},
    "dialog": {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": {},
    "selected": {
      "undefined": null,
    },
    "update": 0,
    "view": {},
  },
  "type": "DESELECT_CREDENTIAL",
}
`;

exports[`CredentialsReducer should handle specific defined types: defined type EDIT_CREDENTIAL_SHOW 1`] = `
{
  "result": {
    "deleted": {},
    "dialog": {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": true,
      "show": true,
    },
    "expanded": {},
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "EDIT_CREDENTIAL_SHOW",
}
`;

exports[`CredentialsReducer should handle specific defined types: defined type EXPANDED_CREDENTIAL 1`] = `
{
  "result": {
    "deleted": {},
    "dialog": {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": {
      "undefined": undefined,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "EXPANDED_CREDENTIAL",
}
`;

exports[`CredentialsReducer should handle specific defined types: defined type NOT_EXPANDED_CREDENTIAL 1`] = `
{
  "result": {
    "deleted": {},
    "dialog": {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": {
      "undefined": null,
    },
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "NOT_EXPANDED_CREDENTIAL",
}
`;

exports[`CredentialsReducer should handle specific defined types: defined type RESET_CREDENTIAL_ACTIONS 1`] = `
{
  "result": {
    "deleted": {},
    "dialog": {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": {},
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "RESET_CREDENTIAL_ACTIONS",
}
`;

exports[`CredentialsReducer should handle specific defined types: defined type SELECT_CREDENTIAL 1`] = `
{
  "result": {
    "deleted": {},
    "dialog": {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": {},
    "selected": {
      "undefined": undefined,
    },
    "update": 0,
    "view": {},
  },
  "type": "SELECT_CREDENTIAL",
}
`;

exports[`CredentialsReducer should handle specific defined types: defined type UPDATE_CREDENTIAL_HIDE 1`] = `
{
  "result": {
    "deleted": {},
    "dialog": {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": {},
    "selected": {},
    "update": 0,
    "view": {},
  },
  "type": "UPDATE_CREDENTIAL_HIDE",
}
`;

exports[`CredentialsReducer should handle specific defined types: defined type UPDATE_CREDENTIALS 1`] = `
{
  "result": {
    "deleted": {},
    "dialog": {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": {},
    "selected": {},
    "update": 1654041600000,
    "view": {},
  },
  "type": "UPDATE_CREDENTIALS",
}
`;
